--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage":"https://guilherme-dev15.github.io/ReactSiteRemake/",
+
   "name": "meu-app",
   "version": "0.1.0",
   "private": true,
