--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://guilherme-dev15.github.io/ReactSiteRemake/",
+  "homepage":"https://guilherme-dev15.github.io/ReactSiteRemake/src",
 
   "name": "meu-app",
   "version": "0.1.0",
