--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage":"https://guilherme-dev15.github.io/ReactSiteRemake/src",
-
+  "homepage": "https://guilherme-dev15.github.io/ReactSiteRemake",
   "name": "meu-app",
   "version": "0.1.0",
   "private": true,
